--- a/Site/templates/produtos.html
+++ b/Site/templates/produtos.html
@@ -21,6 +21,8 @@
                     <!-- Inicio Produtos -->
                     {% for prod in produtos %}
                         {% include 'card_produto.html' %}
+                        {% empty %}
+                        <p> Nenhum produto encontrado para este departamento</p>
                     {% endfor %}
                     <!-- termino produtos-->
                 </div>
