--- a/Site/templates/cadastro.html
+++ b/Site/templates/cadastro.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
  {% block Titulo %}Cadastro{% endblock Titulo %}
 
@@ -14,13 +16,19 @@
     <!-- Section-->
     <section class="py-5">
         <div class="container">
+            {% if mensagem %}
+            <div class="alert alert-success col-md-6 offset-md-3">
+                {{ mensagem }}
+              </div>
+            {% endif %}
+            
             <form action="{% url 'cadastro' %}" method="POST">
                 {% csrf_token %} 
-                <table class="table">
-                {{ form_cliente.as_table }}   
-                </table>
+                <div class="col-md-6 offset-md-3">
+                {{ form_cliente|crispy }} 
+                </div>
 
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" class="btn btn-primary">
             </form>
         </div>
     </section>
