--- a/Site/templates/contato.html
+++ b/Site/templates/contato.html
@@ -1,20 +1,36 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
- {% block Titulo %}Contato{% endblock Titulo %}
+ {% block Titulo %}Fale conosco{% endblock Titulo %}
 
  {% block Conteudo %}
     <!-- Header-->
     <header class="bg-light py-1">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-dark">
-                <h1 class="display-4 fw-bolder">Contato</h1>
+                <h1 class="display-4 fw-bolder">Fale conosco</h1>
             </div>
         </div>
     </header>
     <!-- Section-->
     <section class="py-5">
         <div class="container">
-            {% lorem 5 p random%}
+            {% if mensagem %}
+            <div class="alert alert-success col-md-6 offset-md-3">
+                {{ mensagem }}
+              </div>
+            {% endif %}
+            
+            <form action="{% url 'contato' %}" method="POST">
+                {% csrf_token %} 
+                <div class="col-md-6 offset-md-3">
+                {{ form_contato|crispy }} 
+                </div>
+
+                <input type="submit" value="Enviar" class="btn btn-primary">
+            </form>
         </div>
     </section>
- {%endblock Conteudo %}
+ {% endblock Conteudo %}
+
